[package]
name = "fil-rpc"
version = "0.1.0"
authors = ["sywyn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fil_rpc"
doctest = false
test = false

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
filecoin-proofs = { path = "../filecoin-proofs" }
sector-builder = { path = "../sector-builder" }
storage-proofs = { path = "../storage-proofs" }
slog = "2.4.1"
itertools = "0.8"
lazy_static = "1.3.0"
failure = "0.1.5"
chrono = "0.4"
byteorder = "1.3.1"
memmap = "0.7"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[[bin]]
name = "fil-seal-verify"
test = false

[[bin]]
name = "fil-post-verify"
test = false

[[bin]]
name = "fil-remote-seal"
test = false

[[bin]]
name = "fil-builder"
test = false

[[bin]]
name = "fil-piece-verify"
test = false